Add story generation UI elements
